[project]
name = "docker-webhook"
version = "1.0.0" # needs to stay at 1.0.0 for replace to work
description = "A webhook to allow interaction with docker on a remote server without ssh access."
readme = "README.md"
authors = [
    { name = "GlitchDevX", email = "jonas.ringeis@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.115.13",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]

binary = [
    "pyinstaller>=6.14.1",
]

[project.urls]
Repository = "https://github.com/glitchdevx/docker-webhook"

[project.scripts]
docker-webhook = "src.docker_webhook.main:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
